@@ -1,4 +1,4 @@
-﻿// /***************************************************************************
+// /***************************************************************************
 // The Disc Image Chef
 // ----------------------------------------------------------------------------
 //
@@ -27,7 +27,7 @@
 //     License along with this library; if not, see <http://www.gnu.org/licenses/>.
 //
 // ----------------------------------------------------------------------------
-// Copyright © 2011-2016 Natalia Portillo
+// Copyright © 2011-2017 Natalia Portillo
 // ****************************************************************************/
 
 namespace DiscImageChef.CommonTypes
